src/snapshots/raoul__tests__parse_ast_has_error-19.snap
---
source: src/tests.rs
expression: res.unwrap_err()
---
[
     --> 5:1
      |
    5 | func test(): int {␊
      | ...
    7 | }␊
      | ^
      |
      = Function "test" was already declared before,
]
