src/snapshots/raoul__tests__parse_ast_has_error-2.snap
---
source: src/tests.rs
expression: res.unwrap_err()
---
[
     --> 2:7
      |
    2 |   if (a < 2) {␊
      |       ^
      |
      = Variable "a" was not declared,
]
