src/snapshots/raoul__tests__parse_ast_has_error-3.snap
---
source: src/tests.rs
expression: res.unwrap_err()
---
[
     --> 2:3
      |
    2 |   a = [[1], [2, 3]];␊
      |   ^---------------^
      |
      = Expecting matrix with second dimmension being 2 but received 1,
]
