src/snapshots/raoul__tests__parse_ast_has_error-4.snap
---
source: src/tests.rs
expression: res.unwrap_err()
---
[
     --> 2:10
      |
    2 |   while (a < 2) {␊
      |          ^
      |
      = Variable "a" was not declared,
]
