src/snapshots/raoul__tests__parse_ast_has_error-6.snap
---
source: src/tests.rs
expression: res.unwrap_err()
---
[
     --> 3:3
      |
    3 |   a[3][4] = 2;␊
      |   ^---------^
      |
      = `a` is not a matrix,
     --> 4:9
      |
    4 |   print(a[3][4]);␊
      |         ^-----^
      |
      = `a` is not a matrix,
]
