src/snapshots/raoul__tests__parse_ast_has_error-7.snap
---
source: src/tests.rs
expression: res.unwrap_err()
---
[
     --> 1:1
      |
    1 | func test(): int {␊
      | ...
    7 | }␊
      | ^
      |
      = In function test not all branches return a value,
]
