src/snapshots/raoul__tests__parse_ast_has_error-8.snap
---
source: src/tests.rs
expression: res.unwrap_err()
---
[
     --> 1:1
      |
    1 | func test(): int {␊
      | ...
    3 | }␊
      | ^
      |
      = In function test not all branches return a value,
]
