src/snapshots/raoul__tests__parse_ast_has_error-9.snap
---
source: src/tests.rs
expression: res.unwrap_err()
---
[
     --> 2:7
      |
    2 |   a = test();␊
      |       ^----^
      |
      = Function "test" was not declared or does not return a non-void value,
]
