src/snapshots/raoul__tests__parse_ast_has_error.snap
---
source: src/tests.rs
expression: res.unwrap_err()
---
[
     --> 2:7
      |
    2 |   a = NOT "2";␊
      |       ^-----^
      |
      = Cannot cast from STRING to BOOL,
]
