src/snapshots/raoul__tests__parse_ast_has_error@assign-to-void.ra.snap
---
source: src/tests.rs
expression: res.unwrap_err()
input_file: src/examples/invalid/static/assign-to-void.ra
---
[
     --> 6:7
      |
    6 |   a = test();␊
      |       ^----^
      |
      = Function "test" was not declared or does not return a non-void value,
]
